<resources>
    <string name="app_name">MySpots</string>
    <string name="edit_text_hint_spot_name">Spot - Name</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="btn_save_text">Save Image</string>
    <string name="camera_tool_bar_title">Camera Images Section</string>
    <string name="save_camera_btn_text">SAVE</string>


    <string name="google_maps_api_key">AIzaSyAJbQDbsjn4Iz7_YlAOFrMgayM6WH1s6-s</string>
</resources>