<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddNewPlace">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarAddPlace"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/col3"
        android:theme="@style/CustomNoActionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollID"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBarAddPlace">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_content_padding">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/til_titleID"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_spot_name"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/teal_200"
                    android:textColor="@color/col4"
                    android:textSize="@dimen/edit_text_standard"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/til_descriptionID"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/til_titleID"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_description"
                    android:inputType="textCapSentences"
                    android:textColorHint="@color/teal_200"
                    android:textColor="@color/col4"
                    android:textSize="@dimen/edit_text_standard"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/till_dateID"
                app:layout_constraintTop_toBottomOf="@id/til_descriptionID"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_date"
                    android:inputType="text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColorHint="@color/teal_200"
                    android:textColor="@color/col4"
                    android:textSize="@dimen/edit_text_standard"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/till_locationID"
                app:layout_constraintTop_toBottomOf="@id/till_dateID"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_location"
                    android:inputType="text"
                    android:textColorHint="@color/teal_200"
                    android:textColor="@color/col4"
                    android:textSize="@dimen/edit_text_standard"/>
            </com.google.android.material.textfield.TextInputLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="@dimen/add_picture_image_size"
                android:layout_height="@dimen/add_picture_image_size"
                android:padding="@dimen/image_padding_size"
                android:layout_marginTop="@dimen/image_margin_top"
                android:scaleType="centerCrop"
                android:src="@drawable/camera"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.116"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/till_locationID" />

            <TextView
                android:id="@+id/tv_add_imageID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:text="Add Image"
                android:textSize="@dimen/text_view_image_standard_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                app:layout_constraintTop_toBottomOf="@+id/till_locationID" />

            <Button
                android:id="@+id/btn_Save22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:gravity="center"
                android:onClick="onClick"
                android:textColor="@color/black"
                android:text="@string/btn_save_text"
                android:textSize="@dimen/btn_save_text_size"
                android:textStyle="bold"
                android:background="@drawable/btn_save_bacground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/saveAllBtn"
                android:gravity="center"
                android:onClick="onClick"
                android:text="SAVE 2"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_Save22"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>